--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		</nav>
 		<div class="weather-Info">
 			<img id="weather-Icon" src="" alt="아이콘 로드 중..." width="248"></img>
-			<div id="weather-Des" alt="날씨 설명 로드 중..."></div>
-			<div id="weather-Temp" alt="온도 로드 중..."></div>
+			<div id="weather-Des"></div>
+			<div id="weather-Temp"></div>
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 	</body>
